Weapon Class Added
Each Weapon deals different damage and has different "Cooldown" between each shot.

--- a/BugHunter/BugHunter/BugHunter.csproj
+++ b/BugHunter/BugHunter/BugHunter.csproj
@@ -60,6 +60,7 @@
     <Compile Include="TexturePackerLoader\SpriteRender.cs" />
     <Compile Include="TexturePackerLoader\SpriteSheet.cs" />
     <Compile Include="TexturePackerLoader\SpriteSheetLoader.cs" />
+    <Compile Include="Weapon.cs" />
     <Compile Include="weapons_packed.cs" />
   </ItemGroup>
   <ItemGroup>
