--- a/BugHunter/BugHunter/BugHunter.csproj
+++ b/BugHunter/BugHunter/BugHunter.csproj
@@ -43,12 +43,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Android.cs" />
-    <Compile Include="android_packed.cs" />
+    <Compile Include="PackedTexturesCS\android_packed.cs" />
     <Compile Include="Converter.cs" />
     <Compile Include="FpsCounter.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GUI.cs" />
-    <Compile Include="gui_packed.cs" />
+    <Compile Include="PackedTexturesCS\gui_packed.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
@@ -61,7 +61,7 @@
     <Compile Include="TexturePackerLoader\SpriteSheet.cs" />
     <Compile Include="TexturePackerLoader\SpriteSheetLoader.cs" />
     <Compile Include="Weapon.cs" />
-    <Compile Include="weapons_packed.cs" />
+    <Compile Include="PackedTexturesCS\weapons_packed.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Extended">
