--- a/BugHunter/BugHunter/BugHunter.csproj
+++ b/BugHunter/BugHunter/BugHunter.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Android.cs" />
     <Compile Include="Animation.cs" />
     <Compile Include="AnimationManager.cs" />
+    <Compile Include="Database.cs" />
     <Compile Include="DiscordRpc.cs" />
     <Compile Include="Entities.cs" />
     <Compile Include="Converter.cs" />
@@ -144,8 +145,13 @@
     <Reference Include="MonoGame.Framework">
       <HintPath>..\..\..\..\..\..\..\..\..\..\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data, Version=8.0.14.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
