Menüpunkt "Stats" ausprogrammiert
Auto-Update Ranking Liste
Debuggte gegner
Aufgesammelte Powerups
Geschossen
Treffer
Trefferrate

--- a/BugHunter/BugHunter/BugHunter.csproj
+++ b/BugHunter/BugHunter/BugHunter.csproj
@@ -125,6 +125,7 @@
     </Compile>
     <Compile Include="Settings.cs" />
     <Compile Include="Sound.cs" />
+    <Compile Include="Stats.cs" />
     <Compile Include="Texttable.cs" />
     <Compile Include="TexturePackerLoader\SpriteFrame.cs" />
     <Compile Include="TexturePackerLoader\SpriteRender.cs" />
