Meldung implementiert, falls neue Version verfügbar ist

--- a/BugHunter/BugHunter/BugHunter.csproj
+++ b/BugHunter/BugHunter/BugHunter.csproj
@@ -131,6 +131,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Requests.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Sound.cs" />
     <Compile Include="Stats.cs" />
