DevKonsole (erste implementierungen)

--- a/BugHunter/BugHunter/BugHunter.csproj
+++ b/BugHunter/BugHunter/BugHunter.csproj
@@ -104,6 +104,7 @@
     <Compile Include="AnimationManager.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="Gegner\iOS.cs" />
+    <Compile Include="Konsole.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Menu\ScoreMenu.cs" />
     <Compile Include="Menu\SettingsMenu.cs" />
